# eme_avr_kl15_switch_safety

./: .gitignore  CMakeLists.txt  README.md  klima_15_switch.atsln
klima_15_switch/: klima_15_switch.componentinfo.xml  klima_15_switch.cproj  main.c
klima_15_switch/APP/: app_config.h  app_interface.h  app_program.c
klima_15_switch/Debug/: Makefile  klima_15_switch.elf  klima_15_switch.hex  klima_15_switch.lss  klima_15_switch.map  klima_15_switch.srec  makedep.mk
klima_15_switch/Debug/APP/: app_program.d
klima_15_switch/Debug/HAL/lcd/: lcd_program.d
klima_15_switch/Debug/HAL/led/: Led.d
klima_15_switch/Debug/MCAL/adc/: adc_lconfig.d  adc_program.d
klima_15_switch/Debug/MCAL/gpio/: gpio.d
klima_15_switch/Debug/MCAL/timer/: Timers.d
klima_15_switch/HAL/KL_switch/: KL_switch.c  KL_switch.h
klima_15_switch/HAL/lcd/: lcd_interface.h  lcd_program.c
klima_15_switch/HAL/ldr/: ldr.h
klima_15_switch/MCAL/adc/: adc_config.h  adc_interface.h  adc_private.h  adc_program.c
klima_15_switch/MCAL/timer/: Timers.c  Timers.h
